@@ -276,7 +276,8 @@ CREATE TABLE users (
   c_tags integer NOT NULL DEFAULT 0,
   salt character(9) NOT NULL DEFAULT '',
   ign_votes boolean NOT NULL DEFAULT FALSE,
-  notify_dbedit boolean NOT NULL DEFAULT TRUE
+  notify_dbedit boolean NOT NULL DEFAULT TRUE,
+  notify_announce boolean NOT NULL DEFAULT FALSE
 );
 
 -- vn
